@@ -247,6 +247,10 @@ typedef enum {
     fe_restore_prev_next_level,
 
     fe_sendbackup_req_options_data_shm_control_name,
+    fe_req_options_timestamp,
+    fe_sendbackup_stream_cmd,
+    fe_sendbackup_stream_cmd_get_dumper_result,
+    fe_sendbackup_statedone,
 
     /*
      * All new features must be inserted immediately *before* this entry.
